# PGBM_actividad_1_diagnostico

./: .gitignore  README.md  environment.yml  pyproject.toml
config/: campos_esperados.yaml  config.yaml  scoring_aptitud.yaml
docs/: 10_scoring_multicriterio_aptitud.html  10_scoring_multicriterio_aptitud.html.html  pipeline_scoring_etapa_1_7.html  reporte_html_scoring_etapa_1_7.html  sintesis_modulo_5b_auditoria_tematica_ventana.html
docs/A1_00_alcance_plan_y_trazabilidad_general/: bitacora_metodologica.md  changelog.md  protocolo_auditoria.md
docs/A1_03_auditoria_espacial_y_multirregistros_xy/: sintesis_modulo_3_auditoria_espacial.html  sintesis_modulo_3b_multirregistros_xy.html
docs/A1_04_auditoria_temporal/: sintesis_modulo_4_auditoria_temporal.html
docs/A1_05_auditoria_tematica_y_semantica/: sintesis_modulo_5_auditoria_tematica.html
docs/respaldo_act1_no_organizado/: diccionario_datos.md  manual_modulo_0_configuracion.html  manual_modulo_1_lectura_inicial_gpkg.html  (+1 more)
logs/: decisiones_metodologicas.csv
notebooks/: explorar_vacios_clases_scoring.ipynb
src/: 06_s2_sr_gee_input.py  07_generate_gee_export_report.py  08_join_s2sr_to_original_records.py  09_s2sr_spectral_class_audit.py  10_aptitude_scoring.py  aptitude_scoring.py  gpkg_inspection.py  io.py  profiling.py  reports.py  scoring.py  spatial_audit.py  spatial_qc.py  structural_audit.py  temporal_audit.py  temporal_qc.py  thematic_audit.py  thematic_conflict_taxonomy.py  thematic_qc.py  thematic_window_audit.py  utils.py  xy_multiregister_audit.py  xy_multiregister_audit_legacy_heavy.py
(+142 files in other folders)
